# PythonMod08

./: construct.py
ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirements.txt
ex2/: oracle.py
