[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "A data analysis program simulating Matrix data."
authors = ["romarti2"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"